--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 RANDOM_IV = RA8F@sV9uBVXvml@^zNJzE95QuTwm97G3Jo&WqgmQvnkM0ZGr
 CLIENT_ID = BOWaqTUvMU1smb8iYyE3ssyJXcMspz0yReEpPavfHXOiYED8It69w_1e44VEqxu4i5JqwBOL9j-VGvj37isGCN4
+PORT=3006
