--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "zlib-browserify": "^0.0.3"
   },
   "scripts": {
-    "start": "set PORT=3006 && dotenv -e .env react-app-rewired start",
+    "start": "dotenv -e .env react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
