--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.10",
     "@web3auth/base": "^6.1.4",
     "@web3auth/modal": "^6.1.5",
+    "@walletconnect/sign-client": "^2.9.2",
     "@web3auth/wallet-connect-v2-adapter": "^6.1.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
