--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@walletconnect/sign-client": "^2.9.2",
     "@web3auth/base": "^6.1.4",
     "@web3auth/modal": "^6.1.5",
+    "@web3auth/no-modal": "^7.1.1",
     "@web3auth/wallet-connect-v2-adapter": "^6.1.5",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
