--- a/package.json
+++ b/package.json
@@ -10,23 +10,20 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@walletconnect/sign-client": "^2.9.2",
-    "@web3auth/base": "^6.1.4",
-    "@web3auth/modal": "^6.1.5",
-    "@web3auth/no-modal": "^7.1.1",
-    "@web3auth/wallet-connect-v2-adapter": "^6.1.5",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^16.3.1",
-    "dotenv-cli": "^7.2.1",
-    "ethers": "^6.6.2",
-    "path-browserify": "^1.0.1",
+    "@walletconnect/modal": "^2.6.1",
+    "@web3auth/base": "^7.0.4",
+    "@web3auth/ethereum-provider": "^7.0.4",
+    "@web3auth/no-modal": "^7.0.4",
+    "@web3auth/openlogin-adapter": "^7.0.4",
+    "@web3auth/wallet-connect-v2-adapter": "^7.0.4",
+    "ethers": "^6.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "readable-stream": "^4.4.2",
     "typescript": "^4.9.4",
+    "util": "^0.12.5",
     "web-vitals": "^3.1.0",
-    "web3": "^1.8.2"
+    "web3": "^4.1.1"
   },
   "eslintConfig": {
     "extends": [
