--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "typescript": "^4.9.4",
     "util": "^0.12.5",
     "web-vitals": "^3.1.0",
-    "web3": "^4.1.1"
+    "web3": "^4.1.1",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.2.1"
   },
   "eslintConfig": {
     "extends": [
