--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "web3": "^4.1.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
-    "dotenv-cli": "^7.2.1"
+    "dotenv-cli": "^7.2.1",
+    "path-browserify": "^1.0.1",
+    "readable-stream": "^4.4.2"
   },
   "eslintConfig": {
     "extends": [
