--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@walletconnect/modal": "^2.6.1",
     "@web3auth/ethereum-provider": "^7.0.4",
     "@web3auth/single-factor-auth":"^7.0.4",
+    "firebase": "^10.0.0",
     "ethers": "^6.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
