--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "@types/react-dom": "^18.0.10",
     "@walletconnect/modal": "^2.6.1",
     "@web3auth/ethereum-provider": "^7.0.4",
-    "@web3auth/single-factor-auth":"^7.0.4",
-    "ethers": "^6.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
-    "util": "^0.12.5",
-    "web-vitals": "^3.1.0",
-    "web3": "^4.1.1",
+    "@web3auth/single-factor-auth": "^7.0.4",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
+    "ethers": "^6.7.1",
+    "firebase": "^10.7.0",
     "path-browserify": "^1.0.1",
-    "readable-stream": "^4.4.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "readable-stream": "^4.4.2",
+    "typescript": "^4.9.4",
+    "util": "^0.12.5",
+    "web-vitals": "^3.1.0",
+    "web3": "^4.1.1"
   },
   "eslintConfig": {
     "extends": [
