--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "typescript": "^4.9.4",
     "util": "^0.12.5",
     "web-vitals": "^3.1.0",
-    "web3": "^4.1.1"
+    "web3": "^4.1.1",
+    "ws": "^8.14.2"
   },
   "eslintConfig": {
     "extends": [
