--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.2.1",
+    "express-session": "^1.17.3",
+    "express": "^4.18.2",
+    "passport": "^0.7.0",
+    "passport-appleid": "^1.0.5",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-twitter-oauth2.0": "^1.1.0",
     "ethers": "^6.7.1",
     "firebase": "^10.7.0",
     "path-browserify": "^1.0.1",
